--- a/src/main/resources/assets/plushmania/lang/en_us.json
+++ b/src/main/resources/assets/plushmania/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "item.plushmania.needle": "Needle",
   "item.plushmania.seamstress_needle": "Seamstress Needle",
-  "item.plushmania.spool_of_thread": "Spool of Thread"
+  "item.plushmania.spool_of_thread": "Spool of Thread",
+  "item.plushmania.scissor_blade": "Scissor Blade"
 }
