--- a/src/main/resources/assets/plushmania/lang/en_us.json
+++ b/src/main/resources/assets/plushmania/lang/en_us.json
@@ -2,5 +2,10 @@
   "item.plushmania.needle": "Needle",
   "item.plushmania.seamstress_needle": "Seamstress Needle",
   "item.plushmania.spool_of_thread": "Spool of Thread",
-  "item.plushmania.scissor_blade": "Scissor Blade"
+  "item.plushmania.scissor_blade": "Scissor Blade",
+  "item.plushmania.living_silk": "Living Silk",
+
+  "tabs.plushmania.main.title": "Plushmania",
+
+  "enchantment.plushmania.guillotine": "Guillotine"
 }
