--- a/src/main/resources/assets/plushmania/lang/en_us.json
+++ b/src/main/resources/assets/plushmania/lang/en_us.json
@@ -4,6 +4,7 @@
   "item.plushmania.spool_of_thread": "Spool of Thread",
   "item.plushmania.scissor_blade": "Scissor Blade",
   "item.plushmania.living_silk": "Living Silk",
+  "block.plushmania.plushie": "Plushie",
 
   "tabs.plushmania.main.title": "Plushmania",
 
